RESOLVED FIXED84425
[EFL] EFL's LayoutTestController does not implement elementDoesAutoCompleteForElementWithId
https://bugs.webkit.org/show_bug.cgi?id=84425
Summary [EFL] EFL's LayoutTestController does not implement elementDoesAutoCompleteFo...
Chris Dumez
Reported 2012-04-19 22:48:47 PDT
EFL's LayoutTestController does not implement elementDoesAutoCompleteForElementWithId. Implementing this would allow the following test case to be unskipped: * security/set-form-autocomplete-attribute.html
Attachments
Patch (6.01 KB, patch)
2012-04-19 22:59 PDT, Chris Dumez
no flags
Patch (5.92 KB, patch)
2012-04-22 23:19 PDT, Chris Dumez
no flags
Patch (5.84 KB, patch)
2012-04-23 06:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-04-19 22:59:57 PDT
Gyuyoung Kim
Comment 2 2012-04-20 15:45:01 PDT
Comment on attachment 138044 [details] Patch It looks this patch refers to QT port. Looks fine to me,.
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-04-22 19:47:50 PDT
Comment on attachment 138044 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138044&action=review > Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:114 > + if (!coreNode || !coreNode->renderer()) Are you sure you need the second check here? None of the methods below seem to use it. > Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:117 > + WebCore::HTMLInputElement* inputElement = static_cast< WebCore::HTMLInputElement*>(coreNode); Style nit: extra space after the opening '<'. > Tools/DumpRenderTree/efl/LayoutTestControllerEfl.cpp:472 > + return DumpRenderTreeSupportEfl::elementDoesAutoCompleteForElementWithId(mainFrame, id->ustring().utf8().data()); I think it makes sense to construct a String here and pass it as the second parameter to the DRTSupportEfl method: const String elementId(id->ustring().impl());
Chris Dumez
Comment 4 2012-04-22 23:19:11 PDT
Created attachment 138295 [details] Patch Update patch to take feedback into consideration.
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-04-23 06:27:16 PDT
Comment on attachment 138295 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138295&action=review > Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:119 > + if (!inputElement) > + return false; Is this condition reachable? The previous if already checks if coreNode is 0.
Chris Dumez
Comment 6 2012-04-23 06:40:30 PDT
Created attachment 138336 [details] Patch Yes, you're right. I copied that from the Qt port without paying enough attention.
Raphael Kubo da Costa (:rakuco)
Comment 7 2012-04-23 07:25:37 PDT
Comment on attachment 138336 [details] Patch Looks good, thank you.
WebKit Review Bot
Comment 8 2012-04-23 09:10:54 PDT
Comment on attachment 138336 [details] Patch Clearing flags on attachment: 138336 Committed r114906: <http://trac.webkit.org/changeset/114906>
WebKit Review Bot
Comment 9 2012-04-23 09:10:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.