[EFL] EFL's LayoutTestController does not implement elementDoesAutoCompleteForElementWithId https://bugs.webkit.org/show_bug.cgi?id=84425

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-23
Reviewed by Antonio Gomes.

Source/WebKit/efl:

Add a helper function to DumpRenderTreeSupportEfl, returning
whether or not an element does perform autocompletion.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::elementDoesAutoCompleteForElementWithId):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

Use the new helper in DumpRenderTreeSupportEfl to properly
test whether an element performs autocompletion.

* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::elementDoesAutoCompleteForElementWithId):

LayoutTests:

Unskip the newly-passing test now that EFL's LayoutTestController
implements elementDoesAutoCompleteForElementWithId().

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/102091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114906 268f45cc-cd09-0410-ab3c-d52691b4dbfc